force-app/main/default/objects/Product_Category__c/Product_Category__c.object-meta.xml
<CustomObject>
    <label>Product Category</label>
    <pluralLabel>Product Categories</pluralLabel>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Product categorization hierarchy for FMCG product classification (MOD-01 Master Data Management)</description>
</CustomObject>