force-app/main/default/objects/Product_Category__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Sub-Category</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>