force-app/main/default/objects/Product_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <label>Parent Category</label>
    <type>Lookup</type>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Sub-Categories</relationshipLabel>
    <relationshipName>Sub_Categories</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>