force-app/main/default/objects/Product_Category__c/validationRules/Category_Level_No_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Level_No_Parent</fullName>
    <active>true</active>
    <description>Top-level Category entries cannot have a parent category.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Level__c, "Category"),
    NOT(ISBLANK(Parent_Category__c))
)</errorConditionFormula>
    <errorDisplayField>Parent_Category__c</errorDisplayField>
    <errorMessage>Top-level Category entries cannot have a parent category.</errorMessage>
</ValidationRule>