force-app/main/default/objects/Product_Category__c/validationRules/Sub_Category_Requires_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Category_Requires_Parent</fullName>
    <active>true</active>
    <description>If Level is Sub-Category or Brand, then Parent Category must not be blank.</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Level__c, "Sub-Category"),
        ISPICKVAL(Level__c, "Brand")
    ),
    ISBLANK(Parent_Category__c)
)</errorConditionFormula>
    <errorDisplayField>Parent_Category__c</errorDisplayField>
    <errorMessage>A parent category is required for Sub-Category and Brand level entries.</errorMessage>
</ValidationRule>