force-app/main/default/objects/Product_Category__c/listViews/All_Categories.listView-meta.xml
<ListView>
    <fullName>All_Categories</fullName>
    <columns>NAME</columns>
    <columns>Category_Code__c</columns>
    <columns>Level__c</columns>
    <columns>Parent_Category__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Categories</label>
</ListView>